--- a/public/dashboard.scss
+++ b/public/dashboard.scss
@@ -1,3 +1,6 @@
+body {
+  word-wrap: break-word;
+}
 @media (min-width: 640px) {
   #indicator {
     width: 100px;
@@ -17,9 +20,7 @@
     width: 100%;
     height: 50px;
   }
-  #all_posts {
-    display: none;
-  }
+
   #img_h {
     margin-top: 5px;
     img {
@@ -29,4 +30,18 @@
   #create_post {
     width: 600px;
   }
+}
+#all_posts {
+  display: none;
+}
+@media (max-width: 640px) {
+  img {
+    width: 30px;
+  }
+  #create_post {
+    width: 95%;
+  }
+}
+#post {
+  word-break: break-all;
 }
