--- a/public/design.css
+++ b/public/design.css
@@ -1,3 +1,7 @@
+body {
+  word-wrap: break-word;
+}
+
 @media (min-width: 640px) {
   #top_news {
     display: flex;
@@ -20,11 +24,6 @@
   }
   #first #one {
     background: url(./1156488.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  #first #two {
-    background: url(./tst.png);
     background-size: cover;
     background-repeat: no-repeat;
   }
@@ -52,27 +51,15 @@
     letter-spacing: 0.5px;
     background-color: rgba(0, 0, 0, 0.725);
   }
+  #other_news {
+    min-height: 300px;
+    margin: 2em 0em;
+  }
+  #other_news .item {
+    width: 30%;
+  }
   #other_news #below {
-    background: rgba(0, 0, 0, 0.485);
-    padding: 1em 2em;
-  }
-  #last_section {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  }
-  #last_section #last_holder {
-    width: 80%;
-    background: url(./1156488.png);
-    background-size: cover;
-    background-position-y: center;
-    color: white;
-  }
-  #last_section #last_holder #cover {
-    background: rgba(0, 0, 0, 0.3);
-    padding: 3em 0em;
-  }
-  #last_section #title_section {
-    letter-spacing: 1.044px;
-    margin: 1em 0em;
+    background: rgba(0, 0, 0, 0.426);
   }
 }
 #indicator {
@@ -83,21 +70,15 @@
   font: bold;
 }
 
-#other_news {
-  height: 300px;
-}
-#other_news #one {
-  background: url("./test.jpg") no-repeat;
-  background-size: cover;
-  height: 100%;
-}
-#other_news #two {
-  background: url("./1156488.png") no-repeat;
-  background-size: cover;
-  height: 100%;
-}
-#other_news #three {
-  background: url("./test.jpg") no-repeat;
-  background-size: cover;
-  height: 100%;
+@media (max-width: 640px) {
+  #other_news {
+    color: white;
+  }
+  #other_news .item {
+    min-height: 100px;
+  }
+  #other_news #below {
+    padding: 0.5em;
+    height: 70px;
+  }
 }/*# sourceMappingURL=design.css.map */
