--- a/public/design.scss
+++ b/public/design.scss
@@ -1,5 +1,8 @@
 // For PC
 // Set all background-images from the html file
+body {
+  word-wrap: break-word;
+}
 @media (min-width: 640px) {
   #top_news {
     display: flex;
@@ -25,11 +28,7 @@
       background-size: cover;
       background-repeat: no-repeat;
     }
-    #two {
-      background: url(./tst.png);
-      background-size: cover;
-      background-repeat: no-repeat;
-    }
+
     #below {
       background-color: rgba(0, 0, 0, 0.725);
       padding: 1em;
@@ -57,29 +56,13 @@
     }
   }
   #other_news {
+    min-height: 300px;
+    margin: 2em 0em;
+    .item {
+      width: 30%;
+    }
     #below {
-      background: rgba(0, 0, 0, 0.485);
-      padding: 1em 2em;
-    }
-  }
-  #last_section {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-      sans-serif;
-    #last_holder {
-      width: 80%;
-      background: url(./1156488.png);
-      background-size: cover;
-      background-position-y: center;
-      color: white;
-      #cover {
-        background: rgba(0, 0, 0, 0.3);
-        padding: 3em 0em;
-      }
-    }
-    #title_section {
-      letter-spacing: 1.044px;
-      margin: 1em 0em;
+      background: rgba(0, 0, 0, 0.426);
     }
   }
 }
@@ -93,24 +76,13 @@
 // Phone
 @media (max-width: 640px) {
   #other_news {
-    // height: ;
-  }
-}
-#other_news {
-  height: 300px;
-  #one {
-    background: url("./test.jpg") no-repeat;
-    background-size: cover;
-    height: 100%;
-  }
-  #two {
-    background: url("./1156488.png") no-repeat;
-    background-size: cover;
-    height: 100%;
-  }
-  #three {
-    background: url("./test.jpg") no-repeat;
-    background-size: cover;
-    height: 100%;
+    color: white;
+    .item {
+      min-height: 100px;
+    }
+    #below {
+      padding: 0.5em;
+      height: 70px;
+    }
   }
 }
