--- a/public/login.css
+++ b/public/login.css
@@ -1,3 +1,7 @@
+img {
+  width: 30px;
+}
+
 @media (min-width: 640px) {
   #body {
     height: 100vh;
@@ -5,6 +9,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  #label {
+    display: none;
   }
   #login_body {
     padding: 1.5em;
@@ -54,5 +61,32 @@
   #username #img_h img,
 #password #img_h img {
     width: 35px;
+  }
+}
+@media (max-width: 640px) {
+  body {
+    color: white;
+    background: rgb(133, 133, 133);
+  }
+  #form {
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #form #inputs {
+    width: 80%;
+    margin-top: 10em;
+    padding: 0.8em;
+  }
+  #img_h {
+    padding-top: 0.4em;
+  }
+  #label {
+    margin: 1em;
+    font-weight: bold;
+    text-align: center;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   }
 }/*# sourceMappingURL=login.css.map */
