--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,9 @@
+<style>
+  #header {
+    position: sticky;
+    top: 0px;
+  }
+</style>
 <div id="header" class="bg-white p-3">
   <a href="/">
     <h2 class="font-bold mx-5">
